# python-check-updates

./: .gitignore  .ruff.toml  Makefile  README.md  pcu  pyproject.toml
scripts/: install_dev.sh
tests/: __init__.py  test_pyproject_toml.py  test_requirements_txt.py
tests/data/: other-requirements.txt  pyproject.toml  requirements.txt
